tests/ui/asm/unsupported-option.stderr
error: the `nomem` option cannot be used with `global_asm!`
  --> $DIR/unsupported-option.rs:7:37
   |
LL | global_asm!("", options(att_syntax, nomem, readonly, noreturn, raw));
   |                                     ^^^^^ the `nomem` option is not meaningful for global-scoped inline assembly

error: the `readonly` option cannot be used with `global_asm!`
  --> $DIR/unsupported-option.rs:7:44
   |
LL | global_asm!("", options(att_syntax, nomem, readonly, noreturn, raw));
   |                                            ^^^^^^^^ the `readonly` option is not meaningful for global-scoped inline assembly

error: the `noreturn` option cannot be used with `global_asm!`
  --> $DIR/unsupported-option.rs:7:54
   |
LL | global_asm!("", options(att_syntax, nomem, readonly, noreturn, raw));
   |                                                      ^^^^^^^^ the `noreturn` option is not meaningful for global-scoped inline assembly

error: aborting due to 3 previous errors

